# smc-ai-trading-system

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
