[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smc-ai-trading-system"
version = "0.1.0"
description = "SMC + AI Trading System (Clean Architecture)"
authors = [
  { name = "SMC AI Trader" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = []

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "data*", "docs*"]